--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
       Grundschule
     </span>
     <span class="fill-remaining-space"></span>
-    <button mat-button>Menu Option 01</button>
+    <button mat-button (click)="ws()" >Menu Option 01</button>
     <button mat-button>Menu Option 02</button>
     <!--button mat-button routerLink="login" *ngIf="!isLoggedIn; else notLoggedIn">Login</button>
     <ng-template #notLoggedIn>
