--- a/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
+++ b/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
@@ -1,5 +1,16 @@
-<mat-card>
-    <mat-card-content>
-        
-    </mat-card-content>
-</mat-card>
+<div>
+    <mat-card>
+        <mat-card-content>
+            <form [formGroup]="form" (ngSubmit)="submit()">
+                <mat-form-field class="full-width-input">
+                    <input matInput placeholder="Name" formControlName="name" required>
+                        
+                </mat-form-field>
+                <div>
+                    <button mat-stroked-button  type="submit">Abschicken</button>
+                </div>
+                
+            </form>
+        </mat-card-content>
+    </mat-card>
+</div>
