--- a/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
+++ b/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
@@ -1,16 +1,82 @@
-<div>
-    <mat-card>
-        <mat-card-content>
-            <form [formGroup]="form" (ngSubmit)="submit()">
-                <mat-form-field class="full-width-input">
-                    <input matInput placeholder="Name" formControlName="name" required>
-                        
-                </mat-form-field>
-                <div>
-                    <button mat-stroked-button  type="submit">Abschicken</button>
-                </div>
-                
-            </form>
-        </mat-card-content>
-    </mat-card>
+<div class="around">
+  <mat-card class="formCard">
+    <mat-card-content>
+      <form [formGroup]="form" (ngSubmit)="submit()">
+        <mat-form-field class="full-width-input">
+          <input matInput placeholder="Name" formControlName="name" required />
+        </mat-form-field>
+        <mat-form-field class="full-width-input">
+          <input
+            matInput
+            placeholder="Vorname"
+            formControlName="vorName"
+            required
+          />
+        </mat-form-field>
+        <mat-form-field class="full-width-input">
+          <mat-label>Klasse</mat-label>
+          <mat-select
+            matInput
+            placeholder="Klasse"
+            formControlName="class"
+            required
+          >
+            <mat-option *ngFor="let class of classes" [value]="class">
+              {{ class }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field>
+        <mat-label>Disziplin und Leistungsstufe</mat-label>
+        <mat-radio-group
+          aria-labelledby="example-radio-group-label full-width-input"
+          class="example-radio-group "
+          [(ngModel)]="disciplinValue"
+          formControlName="disciplin"
+          required
+        >
+          <mat-radio-button
+            matInput
+            class="example-radio-button full-width-input"
+            *ngFor="let disciplin of dis"
+            [value]="disciplin"
+          >
+            {{ disciplin.disciplin_name }}
+            <span *ngIf="disciplin.disciplin_name === 'Skifahren'"
+              >für {{ disciplin.difficulty }}</span
+            >
+          </mat-radio-button>
+        </mat-radio-group>
+
+        <!--
+        <mat-form-field *ngIf="disciplinValue === 'skifahren'">
+          <mat-label>Klasse</mat-label>
+          <mat-select
+          matInput
+            placeholder="Leistungsstufe"
+            formControlName="difficult"
+            required
+          >
+            <mat-option *ngFor="let class of classes" [value]="class">
+              {{ class }}
+            </mat-option>
+          </mat-select>
+        </mat-form-field> -->
+        <br>
+        <br>
+        <p class="full-width-input">
+          Kosten:
+          <span *ngIf="disciplinValue != null">
+            {{ disciplinValue.price }}€
+          </span>
+        </p>
+
+
+        <div>
+          <button mat-stroked-button type="submit">Abschicken</button>
+        </div>
+      </form>
+      <button (click)="print()"><mat-icon>print</mat-icon></button>
+    </mat-card-content>
+  </mat-card>
 </div>
+<app-print-layout></app-print-layout>
