--- a/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
+++ b/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
@@ -75,7 +75,8 @@
           <button mat-stroked-button type="submit">Abschicken</button>
         </div>
       </form>
-      <button (click)="print()"><mat-icon>print</mat-icon></button>
+      <button (click)="print()">
+        <mat-icon>print</mat-icon></button>
     </mat-card-content>
   </mat-card>
 </div>
