--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,13 +1,14 @@
 <mat-toolbar color="primary" >
-    <span>
+    <span id="home" (click)="home()">
       Grundschule
     </span>
     <span class="fill-remaining-space"></span>
     <button mat-button (click)="ws()" >Menu Option 01</button>
-    <button mat-button>Menu Option 02</button>
+    
     <!--button mat-button routerLink="login" *ngIf="!isLoggedIn; else notLoggedIn">Login</button>
     <ng-template #notLoggedIn>
       <button mat-button (click)="onLogout()">Logout</button>
     </ng-template -->
     <button mat-button (click)="logout()" >Logout</button>
+    <button mat-button *ngIf="teacherTrue">Lehrerbereich</button>
   </mat-toolbar>
