--- a/src/app/components/companion/companion.component.html
+++ b/src/app/components/companion/companion.component.html
@@ -1,11 +1,50 @@
-<form [formGroup]="form" (ngSubmit)="submit()">
+
+<form [formGroup]="form">
 <mat-form-field>
     <mat-label>Disciplin</mat-label>
     <mat-select  formControlName="disciplin" >
-      <mat-option *ngFor="let discis of dis" [value]="discis.value" >
+      <mat-option *ngFor="let discis of dis" [value]="discis" >
         {{discis.disciplin_name}}
       </mat-option>
     </mat-select>
   </mat-form-field>
 </form>
-  <button (click)="companionProof()" mat-button>überprüfen</button>
+<button *ngIf="!weg"  (click)="companionProof()" mat-button>überprüfen</button>
+<div>
+  <div *ngIf="comp1">
+    <form   [formGroup]="forms">
+    <mat-form-field appearance="fill" >
+      <mat-label >Name</mat-label>
+      <input matInput formControlName="NameVor">
+    </mat-form-field>
+    <mat-form-field appearance="fill" >
+      <mat-label >Vorname</mat-label>
+      <input matInput formControlName="Name">
+    </mat-form-field>
+  </form>
+  <button *ngFor="let dise of dist"  (click)="comps1(dise)" mat-button>absenden</button>
+  </div>
+
+  <div *ngIf="comp2">
+    <form   [formGroup]="forms">
+      <mat-form-field appearance="fill" >
+        <mat-label >Name</mat-label>
+        <input matInput formControlName="NameVor">
+      </mat-form-field>
+      <mat-form-field appearance="fill" >
+        <mat-label >Vorname</mat-label>
+        <input matInput formControlName="Name">
+      </mat-form-field>
+    </form>
+    <button *ngFor="let dise of dist" (click)="comps2(dise)" mat-button>absenden</button>
+  </div>
+</div>
+
+
+<!-- <form [formGroup]="form">
+  <select formControlName="disciplin">
+    <option [value]="disciplin.disciplin_name" *ngFor="let disciplin of dis">
+       {{disciplin.disciplin_name}}</option>
+  </select>
+</form>-->
+
