--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,4 @@
 <mat-grid-list cols="2" rowHeight="2:1">
-  <mat-grid-tile (click)="comp()"><img src="https://cdn.prod.www.spiegel.de/images/4978e3d5-0001-0004-0000-000001501385_w948_r1.77_fpx58_fpy55.01.jpg" alt=""></mat-grid-tile>
-  <mat-grid-tile (click)="ski()"><img src="https://www.merkur.de/bilder/2018/06/29/9996070/419224847-e-ski-soll-wintersport-revolutionieren-Mo6bZMX74ea.jpg" alt=""></mat-grid-tile>
+  <mat-grid-tile class="bild" (click)="comp()"><img src="https://cdn.prod.www.spiegel.de/images/4978e3d5-0001-0004-0000-000001501385_w948_r1.77_fpx58_fpy55.01.jpg" alt=""></mat-grid-tile>
+  <mat-grid-tile class="bild" (click)="ski()"><img src="https://www.merkur.de/bilder/2018/06/29/9996070/419224847-e-ski-soll-wintersport-revolutionieren-Mo6bZMX74ea.jpg" alt=""></mat-grid-tile>
 </mat-grid-list>
