--- a/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
+++ b/src/app/winterSportTag/anmelde-formular/anmelde-formular.component.html
@@ -1,7 +1,7 @@
 <div class="around">
   <mat-card class="formCard">
     <mat-card-content>
-      <form [formGroup]="form" (ngSubmit)="submit()">
+      <form *ngIf="!submitted"  [formGroup]="form" (ngSubmit)="submit()">
         <mat-form-field class="full-width-input">
           <input matInput placeholder="Name" formControlName="name" required />
         </mat-form-field>
@@ -72,12 +72,18 @@
 
 
         <div>
-          <button mat-stroked-button type="submit">Abschicken</button>
+          <button mat-stroked-button  type="submit" >Abschicken</button>
         </div>
       </form>
-      <button (click)="print()">
+      <div *ngIf="submitted" >
+        Sie haben Ihre Anmeldung erfolgreich abgesendet
+      <br>
+      Hier Können Sie drucken:
+      </div>
+      <button (click)="print()"  *ngIf="submitted">
         <mat-icon>print</mat-icon></button>
     </mat-card-content>
   </mat-card>
 </div>
-<app-print-layout></app-print-layout>
+
+<app-print-layout  [prints]="prints"></app-print-layout>
