--- a/src/app/winterSportTag/anmelde-formular/print-layout/print-layout.component.scss
+++ b/src/app/winterSportTag/anmelde-formular/print-layout/print-layout.component.scss
@@ -2,7 +2,16 @@
   height: 29.7cm;
   width: 21cm;
 padding: auto;
-background-color: blue;
+background-color: #0000ff;
+}
+.vorlage{
+  font-weight: bold;
+}
+.unter{
+  padding-right: 100px;
+  border-bottom: solid black 1px;
+  width: 100px;
+  height: 50px;
 }
 @media screen {
   :host {
